fixed div not expanding to 100% on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@ a{
 }
 html, body {
     width:100%;
-    height:100%;
     margin:0;
     padding:0;
 }
@@ -56,6 +55,7 @@ div#image {
     bottom:0;
     left:0;
     z-index: -1;
+    max-height: 1400px;
 }
 #welcome {
     text-align:center;
@@ -65,6 +65,7 @@ div#image {
 @media screen and (max-width: 800px) and (min-width: 500px){
     #welcome{
         margin: 175px 50px 75px 50px;
+        font-size: 50px;
     }
 }
 @media screen and (min-width: 800px) {
@@ -109,6 +110,7 @@ div#btn{
 div#body {
     width: 100%;
     margin-top: 60%;
+    min-width: 100%;
 }
 div.section1 {
     width: 100%;
@@ -118,6 +120,7 @@ div.section1 {
     height: 550px;
 }
 div.section2 {
+    width: 100%;
     background: #F0F0F0;
     height: 550px;
 }
@@ -129,9 +132,10 @@ div#footer {
     border-bottom: 1px solid #B0B0B0;
     background: #CCCCCC;
     height: 300px;
+    width: 100%;
 }
 div.section{
-    float: left;
+    display: inline-block;
 }
 div.bubble {
     text-align: center;
@@ -143,13 +147,15 @@ div.bubble {
     margin-left: 100px;
     margin-top: 80px;
 }
+div.bubble.first {
+    margin-left: 0px;
+}
 p.bubble{
   font-size: 20px;
 }
 div.half {
   height: 100%;
-  margin: 0px auto;
-  width: 1005px;
+  text-align: center;
 }
 .mid {
   padding-top:200px;
